--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "shr2js",
-  "version": "1.0.0",
-  "description": "Converts Standard Health Record (SHR) elements from their custom grammar to JSON",
+  "name": "shr-json-export",
+  "version": "3.0.0",
+  "description": "Exports SHR data elements from SHR models to JSON",
   "author": "",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git@github.com:standardhealth/shr2js.git"
+    "url": "git@github.com:standardhealth/shr-json-export.git"
   },
   "main": "index.js",
   "scripts": {
@@ -17,12 +17,12 @@
     "lint:fix": "./node_modules/.bin/eslint . --fix"
   },
   "dependencies": {
-    "antlr4": "^4.5.3",
-    "markdown-it": "^8.1.0"
+    "shr-models": "~3.0.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "eslint": "^3.6.1",
-    "mocha": "^3.1.0"
+    "mocha": "^3.2.0",
+    "shr-test-helpers": "~3.0.0"
   }
 }
