--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shr-json-export",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "description": "Exports SHR data elements from SHR models to JSON",
   "author": "",
   "license": "Apache-2.0",
@@ -17,12 +17,12 @@
     "lint:fix": "./node_modules/.bin/eslint . --fix"
   },
   "dependencies": {
-    "shr-models": "standardhealth/shr-models#grammar_4_map"
+    "shr-models": "~4.1.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "eslint": "^3.6.1",
     "mocha": "^3.2.0",
-    "shr-test-helpers": "standardhealth/shr-test-helpers#grammar_4_map"
+    "shr-test-helpers": "~4.1.0"
   }
 }
