--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
     },
     "rules": {
         "indent": ["error", 2],
-        "linebreak-style": ["error", "unix"],
+        "linebreak-style": ["off", "unix"],
         "no-console": ["warn", { "allow": ["warn", "error"] }],
         "no-unused-vars": ["error", { "vars": "all", "args": "none" }],
         "quotes": ["error", "single", { "allowTemplateLiterals": true }],
