--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shr-json-export",
-  "version": "4.3.1",
+  "version": "4.3.2",
   "description": "Exports SHR data elements from SHR models to JSON",
   "author": "",
   "license": "Apache-2.0",
@@ -18,12 +18,12 @@
   },
   "dependencies": {
     "bunyan": "^1.8.9",
-    "shr-models": "4.2.0"
+    "shr-models": "^4.2.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "eslint": "^3.6.1",
     "mocha": "^3.2.0",
-    "shr-test-helpers": "4.2.0"
+    "shr-test-helpers": "^4.2.1"
   }
 }
