--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "lint": "./node_modules/.bin/eslint .",
     "lint:fix": "./node_modules/.bin/eslint . --fix"
   },
-  "dependencies": {
-    "bunyan": "^1.8.9",
-    "shr-models": "^5.2.0"
-  },
   "devDependencies": {
+    "bunyan": "^1.8.9",
     "chai": "^3.5.0",
     "eslint": "^3.6.1",
     "mocha": "^3.2.0",
-    "shr-test-helpers": "^5.0.2"
+    "shr-models": "^5.2.1",
+    "shr-test-helpers": "^5.1.1"
+  },
+  "peerDependencies": {
+    "bunyan": "^1.8.9",
+    "shr-models": "^5.2.1"
   }
 }
