--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shr-json-export",
-  "version": "5.1.5",
+  "version": "6.0.0-beta.1",
   "description": "Exports SHR data elements from SHR models to JSON",
   "author": "",
   "license": "Apache-2.0",
@@ -22,11 +22,11 @@
     "chai": "^3.5.0",
     "eslint": "^3.6.1",
     "mocha": "^3.2.0",
-    "shr-models": "^5.5.3",
-    "shr-test-helpers": "^5.2.2"
+    "shr-models": "^6.0.0-beta.1",
+    "shr-test-helpers": "^6.0.0-beta.1"
   },
   "peerDependencies": {
     "bunyan": "^1.8.9",
-    "shr-models": "^5.5.3"
+    "shr-models": "^6.0.0-beta.1"
   }
 }
